Fixed timestamp in Android app.